--- a/index.css
+++ b/index.css
@@ -1,17 +1,20 @@
-body{
+/* .container{
   margin: 0 auto;
-}
+  height: 100%;
+} */
 
 img{
   height: 500px;
-  width: 200px;
-}
-#map{
-  margin-bottom: 10px;
+  width: 100px;
 }
 
-.sm-img{
-  height: 140px;
-  width: auto;
-  max-width: 100%;
+
+/* #map{
+  margin-bottom: 10px;
+} */
+#carouselExampleIndicators{
+  padding-top:70px;
 }
+/* .list-group{
+  border-color: white;
+} */
