--- a/index.css
+++ b/index.css
@@ -46,6 +46,7 @@ img{
     background:#fff;
     display:inline-block;
         font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        text-transform: uppercase;
 }
 .locate{
 
