--- a/index.css
+++ b/index.css
@@ -3,10 +3,10 @@
   height: 100%;
 } */
 
-img{
-  height: 500px;
-  width: 100px;
-}
+/* img{
+  height: 10%;
+
+} */
 
 
 /* #map{
@@ -15,6 +15,7 @@ img{
 #carouselExampleIndicators{
   padding-top:20px;
   padding-bottom: 20px;
+
 }
 /* .list-group{
   border-color: white;
