--- a/index.css
+++ b/index.css
@@ -12,15 +12,21 @@
 /* #map{
   margin-bottom: 10px;
 } */
-#carouselExampleIndicators{
-  padding-top:20px;
-  padding-bottom: 20px;
 
-}
 /* .list-group{
   border-color: white;
 } */
+.navbar{
+  margin-bottom: 5px solid black;
+  font-family: 'Merienda', cursive;
+  font-size: 2rem;
+  
+ 
+}
 
+body{
+      font-family: 'Merienda', cursive;
+}
 .carousel-item{
   transition: transform 1s ease, opacity 1s ease-out;
 }
@@ -39,6 +45,7 @@
 
 #carouselExampleIndicators{
   padding-bottom: 50px;
+  padding-top: 50px;
 }
 
 .line-center{
@@ -46,8 +53,9 @@
     padding:0 10px;
     background:#fff;
     display:inline-block;
-        font-family: 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+font-family: 'Merienda', cursive;
         text-transform: uppercase;
+
 }
 .locate{
 
@@ -71,7 +79,7 @@
 .list-group{
   list-style-type: none;
 
-font-family: 'Roboto Slab', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+font-family: 'Merienda', cursive;
 padding: 100px 0;
 }
 
@@ -80,4 +88,58 @@ padding: 100px 0;
       padding-top: 40px;
       margin: 60px 0;
 
+}
+#navbar{
+  min-height: 4rem;
+background-color: #f8f9fa;
+box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
+
+
+}
+
+
+a{
+  color: green;
+
+  font-weight: bolder;
+}
+/*.nav-brand img{
+  width: 20px;
+  height: 5%;
+}*/
+
+/*.navbar-toggler{
+  float: right;
+}
+a.nav-link{
+	text-align:right;
+}*/
+
+
+
+
+
+.image{
+	
+	width:200px;
+	height:100px;
+	border:4px solid #607D8B;
+	border-radius: 25px;
+}
+
+@media only screen and (max-device-width: 500px) {
+  .image { 
+    width: 100px;
+	height:50px;
+  }
+}
+
+.nav-item{
+	margin-left: 20px;
+}
+
+@media only screen and (max-device-width: 965px){
+	.navbar{
+		font-size: 1rem;
+	}
 }
