--- a/products.css
+++ b/products.css
@@ -18,6 +18,7 @@ body{
 
 .card-img-top{
   height:auto;
+ 
 }
 
 .card{
@@ -32,4 +33,58 @@ h5{
 
 hr.new{
 border: 1px solid #bdc3c747;
+}
+
+
+
+#navbar{
+  min-height: 2rem;
+background-color:  #f8f9fa;
+box-shadow: 0 0.5rem 1rem rgba(0,0,0,.05), inset 0 -1px 0 rgba(0,0,0,.1);
+font-family: 'Merienda', cursive;
+font-size: 2rem;
+
+
+}
+
+.container{
+	margin-top: 100px;
+}
+
+.row{
+	margin-top: 30px;
+}
+.navbar-toggler{
+	float:right;
+}
+
+a{
+  color: green;
+
+  font-weight: bolder;
+}
+
+.image{
+	
+	width:200px;
+	height:100px;
+	border:4px solid #607D8B;
+	border-radius: 25px;
+}
+
+@media only screen and (max-device-width: 500px) {
+  .image { 
+    width: 100px;
+	height:50px;
+  }
+}
+
+.nav-item{
+	margin-left: 20px;
+}
+
+@media only screen and (max-device-width: 965px){
+	#navbar{
+		font-size: 1rem;
+	}
 }
