--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ a.nav-link{
 
 
 
-image{
+img.image{
 	
 	width:200px;
 	height:100px;
@@ -128,7 +128,7 @@ image{
 }
 
 @media only screen and (max-device-width: 500px) {
-  image { 
+  img.image { 
     width: 100px;
 	height:50px;
   }
